test/e2e/crs/serviceRouteBinding/serviceroutebinding.yaml
apiVersion: cloudfoundry.crossplane.io/v1alpha1
kind: ServiceRouteBinding
metadata:
  name: e2e-serviceroutebinding-binding
  namespace: service-test
spec:
  forProvider:
    routeRef:
      name: e2e-serviceroutebinding-route
      policy:
        resolve: Always
    serviceInstanceRef:
      name: e2e-serviceroutebinding-serviceinstance
      policy:
        resolve: Always
